--- a/overlay-evolution/EvolutionSystemUIResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionSystemUIResSpacewar/res/values/evolution_config.xml
@@ -13,5 +13,6 @@
 
     <!-- Color of the UDFPS Pressed view -->
     <color name="config_udfpsColor">#ffffe6</color>
-    
+
+    <integer name="config_defaultPeakRefreshRate">true</integer>
 </resources>
