--- a/overlay-miku/MikuDeviceFrameworksOverlay/res/values/config.xml
+++ b/overlay-miku/MikuDeviceFrameworksOverlay/res/values/config.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Build fingerprint from stock ROM -->
-    <string name="config_stockFingerprint" translatable="false">Xiaomi/mona/mona:11/RKQ1.210503.001/V12.5.9.0.RKVCNXM:user/release-keys</string>
+    <string name="config_stockFingerprint" translatable="false">Nothing/Spacewar/Spacewar:12/SKQ1.211230.001/1673511218:user/release-keys</string>
 </resources>
