--- a/overlay-evolution/EvolutionSettingsResSpacewar/res/values/evolution_strings.xml
+++ b/overlay-evolution/EvolutionSettingsResSpacewar/res/values/evolution_strings.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2015 The Android Open Source Project
+     Copyright (C) 2019-2023 Evolution X
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- ROM maintainer name -->
+    <!-- About device screen, build maintainer -->
+    <string name="build_device_url">https://jp.nothing.tech/products/phone-1</string>
     <string name="build_maintainer_summary">shin32</string>
-    <string name="build_maintainer_telegram">https://twitter.com/trx8020ocrzn9</string>
-	
+    <string name="build_maintainer_donate_url">https://twitter.com/trx8020ocrzn9</string>
 </resources>
