--- a/overlay/nt/NTSystemUI/res/values/dimens.xml
+++ b/overlay/nt/NTSystemUI/res/values/dimens.xml
@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-     Copyright (C) 2022 The Nameless-AOSP Project
-     SPDX-License-Identifier: Apache-2.0
--->
 <resources>
 
     <!-- Allow CornerHandleView and PathSpecCornerPathRenderer to decouple from corner-radius -->
@@ -27,6 +23,9 @@
     <dimen name="keyguard_indication_margin_bottom">320px</dimen>
 
     <!-- Location on the screen of the center of the physical power button. -->
-    <dimen name="physical_power_button_center_screen_location_y">1000px</dimen>
+    <dimen name="physical_power_button_center_screen_location_y">989px</dimen>
 
+    <!-- Location on the screen of the center of the physical volume up/down buttons. -->
+    <dimen name="physical_volume_up_button_center_screen_location_y">840px</dimen>
+    <dimen name="physical_volume_down_button_center_screen_location_y">990px</dimen>
 </resources>
