--- a/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
@@ -29,4 +29,7 @@
 
     <!-- Whether the device supports Smart Pixels -->
     <bool name="config_supportSmartPixels">true</bool>
+
+    <!-- Whether to use Richtap vibration -->
+    <bool name="config_usesRichtapVibration">false</bool>
 </resources>
