--- a/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
@@ -31,5 +31,5 @@
     <bool name="config_supportSmartPixels">true</bool>
 
     <!-- Whether to use Richtap vibration -->
-    <bool name="config_usesRichtapVibration">false</bool>
+    <bool name="config_usesRichtapVibration">true</bool>
 </resources>
