--- a/overlay/WifiResCommon/res/values/config.xml
+++ b/overlay/WifiResCommon/res/values/config.xml
@@ -18,6 +18,9 @@
     <!-- Boolean indicating performing a partial initial scan is enabled -->
     <bool translatable="false" name="config_wifiEnablePartialInitialScan">true</bool>
 
+    <!-- Wifi driver supports 6GHz band for softap when chip support 6GHz -->
+    <bool translatable="false" name="config_wifiSoftap6ghzSupported">true</bool>
+
     <!-- Wifi driver supports IEEE80211AX single user beamformee for softap -->
     <bool translatable="false" name="config_wifiSoftapHeSuBeamformeeSupported">true</bool>
 
@@ -96,7 +99,4 @@
         <item>-65</item> <!-- [-71, -65)                   3 -->
                          <!-- [-65, +infinity)             4 -->
     </integer-array>
-
-    <!-- Default access point SSID used for tethering -->
-    <string name="wifi_tether_configure_ssid_default" translatable="false">Nothing Phone (1)</string>
 </resources>
