--- a/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
@@ -24,6 +24,9 @@
     <!-- Whether devices suports in-display fingerprint when screen is off -->
     <bool name="config_supportsScreenOffUdfps">true</bool>
 
+    <!-- Pocket Lock -->
+    <bool name="config_pocketModeSupported">true</bool>
+
     <!-- Whether the device supports Smart Pixels -->
     <bool name="config_supportSmartPixels">true</bool>
 
