--- a/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
@@ -32,4 +32,7 @@
 
     <!-- Whether to use Richtap vibration -->
     <bool name="config_usesRichtapVibration">true</bool>
+
+    <!-- Display color inversion availability -->
+    <bool name="config_displayInversionAvailable">false</bool>
 </resources>
