--- a/overlay-evolution/EvolutionSettingsResSpacewar/res/values/config.xml
+++ b/overlay-evolution/EvolutionSettingsResSpacewar/res/values/config.xml
@@ -17,4 +17,6 @@
 	<!-- Whether to show a preference item for mobile plan -->
     <bool name="config_show_mobile_plan">false</bool>
 
+    <!-- Whether to show TouchGestures preference -->
+    <bool name="config_supportsTouchGestures">true</bool>
 </resources>
