--- a/overlay/SpacewarSettings/res/values/config.xml
+++ b/overlay/SpacewarSettings/res/values/config.xml
@@ -44,4 +44,8 @@
 
     <!-- Max network scan search time in seconds -->
     <integer name="config_network_scan_helper_max_search_time_sec">254</integer>
+
+    <!-- Battery Health -->
+    <string name="config_batteryRemainingCapacityNode">/sys/class/power_supply/battery/charge_full</string>
+    <string name="config_batteryDesignCapacityNode">/sys/class/power_supply/battery/charge_full_design</string>
 </resources>
