--- a/overlay-evolution/EvolutionSystemUIResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionSystemUIResSpacewar/res/values/evolution_config.xml
@@ -7,9 +7,10 @@
     <!-- Allow devices override audio panel location to the left side -->
     <bool name="config_audioPanelOnLeftSide">true</bool>
 
-    <!-- Max visible notification icons -->
-    <integer name="config_maxVisibleNotificationIcons">7</integer>
-    <integer name="config_maxVisibleNotificationIconsOnLock">8</integer>
+    <!-- Maximum number of notification icons shown in the status bar (excluding overflow dot) -->
+    <integer name="max_notif_static_icons">7</integer>
+   <!-- Maximum number of notification icons shown on the lockscreen (excluding overflow dot) -->
+    <integer name="max_notif_icons_on_lockscreen">8</integer>
 
     <!-- Color of the UDFPS Pressed view -->
     <color name="config_udfpsColor">#ffffe6</color>
