--- a/overlay/MatrixxFrameworksSpacewar/res/values/config.xml
+++ b/overlay/MatrixxFrameworksSpacewar/res/values/config.xml
@@ -25,4 +25,7 @@
 
     <!-- Display color inversion availability -->
     <bool name="config_displayInversionAvailable">false</bool>
+
+    <!-- Whether the device supports Smart Pixels -->
+    <bool name="config_supportSmartPixels">true</bool>
 </resources>
