--- a/overlay/SpacewarCarrierConfig/res/xml/vendor.xml
+++ b/overlay/SpacewarCarrierConfig/res/xml/vendor.xml
@@ -2573,6 +2573,10 @@
     <!-- NOS Adds -->
     <carrier_config mcc="001" mnc="01">
         <boolean name="call_barring_visibility_bool" value="true" />
+        <boolean name="allow_hold_call_during_emergency_bool" value="true" />
+        <boolean name="vonr_enabled_bool" value="true" />
+        <boolean name="vonr_on_by_default_bool" value="true" />
+        <boolean name="nt_carrier_default_sa_enabled_bool" value="true" />
     </carrier_config>
     <carrier_config mcc="208" mnc="01">
         <string-array name="apn_hide_rule_strings_array" num="2">
