--- a/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/config.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/config.xml
@@ -15,4 +15,10 @@
         <item>org.lineageos.aperture</item>
         <item>com.nothing.camera</item>
     </string-array>   
+
+    <!-- Whether to use Richtap vibration -->
+    <bool name="config_usesRichtapVibration">true</bool>
+
+    <!-- Display color inversion availability -->
+    <bool name="config_displayInversionAvailable">false</bool>
 </resources>
