--- a/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
@@ -4,12 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
-    <!-- Name of a font family to use as light font. For theming purpose. -->
-    <string name="config_lightFontFamily" translatable="false">sans-serif-light</string>
-
-    <!-- Name of a font family to use as regular font. For theming purpose. -->
-    <string name="config_regularFontFamily" translatable="false">sans-serif-regular</string>
-
     <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
     <integer name="config_screenRecorderMaxFramerate">60</integer>
 
@@ -43,7 +37,7 @@
     <bool name="config_displayInversionAvailable">false</bool>
 
     <!-- Whether charging control should be enabled by default -->
-    <bool name="config_chargingControlEnabled">true</bool>
+    <bool name="config_chargingControlEnabled">false</bool>
     <!-- Default charging control mode.
        This integer should be set to:
        1 - auto - Use the alarm to calculate the time range when to activate charging control
