--- a/overlay/SpacewarFrameworks/res/values/dimens.xml
+++ b/overlay/SpacewarFrameworks/res/values/dimens.xml
@@ -4,14 +4,14 @@
     <!-- Height of the status bar.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
          -->
-    <dimen name="status_bar_height">95px</dimen>
+    <dimen name="status_bar_height">63px</dimen>
 
     <!-- The default height of the status bar used in {@link SystemBarUtils#getStatusBarHeight} to
          calculate the status bar height. -->
     <dimen name="status_bar_height_default">@dimen/status_bar_height</dimen>
 
     <!-- Default radius of the software rounded corners. -->
-    <dimen name="rounded_corner_radius">20dp</dimen>
+    <dimen name="rounded_corner_radius">107px</dimen>
 
     <!-- Height of the status bar in portrait.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
