--- a/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2015 The Android Open Source Project
+     Copyright (C) 2019-2024 The Evolution X Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
@@ -10,63 +10,128 @@
     <!-- Name of a font family to use as regular font. For theming purpose. -->
     <string name="config_regularFontFamily" translatable="false">sans-serif-regular</string>
 
-    <!-- If not zero, limits the internal screen recorder's framerate to the set value. -->
-    <integer name="config_screenRecorderMaxFramerate">60</integer>
+    <!-- Whether device has dash charging support -->
+    <bool name="config_hasDashCharger">false</bool>
 
-    <!-- Is the battery LED intrusive? Used to decide if there should be a disable option -->
-    <bool name="config_intrusiveBatteryLed">false</bool>
+    <!-- Whether device has warp charging support -->
+    <bool name="config_hasWarpCharger">false</bool>
 
-    <!-- Does the device have a notification led -->
-    <bool name="config_hasNotificationLed">false</bool>
+    <!-- Whether device has VOOC charging support -->
+    <bool name="config_hasVoocCharger">false</bool>
 
-    <!-- Does the battery LED support multiple colors?
-         Used to decide if the user can change the colors -->
-    <bool name="config_multiColorBatteryLed">false</bool>
+    <!-- Whether device has turbo power charging support -->
+    <bool name="config_hasTurboPowerCharger">false</bool>
 
-    <!-- Do the battery/notification LEDs support pulsing?
-         Used to decide if we show pulse settings -->
-    <bool name="config_ledCanPulse">false</bool>
+    <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+    <string name="config_oemFastChargerStatusPath" translatable="false"></string>
+
+    <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+    <string name="config_oemFastChargerStatusPath2" translatable="false"></string>
+
+    <!-- Expected value from fast charging status file  -->
+    <string name="config_oemFastChargerStatusValue" translatable="false">1</string>
+
+    <!-- Whether to cancel fingerprint operation if not idle -->
+    <bool name="config_fpCancelIfNotIdle">false</bool>
+
+    <!-- Whether Pixel props is enabled -->
+    <bool name="config_enablePixelProps">true</bool>
+
+    <!-- Define device configs on boot -->
+    <string-array name="global_device_configs_override" translatable="false">
+    </string-array>
+    <string-array name="device_configs_override" translatable="false">
+    </string-array>
+
+    <!-- Whether to force enable multi resolution configuration for camera -->
+    <bool name="config_forceMultiResolution">false</bool>
+
+    <!-- Display color inversion availability -->
+    <bool name="config_displayInversionAvailable">true</bool>
 
     <!-- Whether devices suports in-display fingerprint when screen is off -->
-    <bool name="config_supportsScreenOffUdfps">true</bool>
+    <bool name="config_supportScreenOffUdfps">false</bool>
+
+    <!-- Whether to use Richtap vibration -->
+    <bool name="config_usesRichtapVibration">false</bool>
+
+    <!-- Defines the sysfs attribute path used by pocket bridge
+         to communicate pocket state to the pocket judge kernel driver. -->
+    <string name="config_pocketBridgeSysfsInpocket"></string>
 
     <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">true</bool>
+    <bool name="config_pocketUseLightSensor">true</bool>
 
-    <!-- Whether the device supports Smart Pixels -->
-    <bool name="config_supportSmartPixels">true</bool>
+    <!-- Defines custom OEM sensor for pocket detection. -->
+    <string name="config_pocketJudgeVendorSensorName"></string>
+    <item name="config_pocketJudgeVendorSensorValue" format="float" type="dimen">1.0</item>
+    <string name="config_pocketJudgeVendorProximitySensorName"></string>
 
-    <!-- Whether to use Richtap vibration -->
-    <bool name="config_usesRichtapVibration">true</bool>
+    <!-- List of system apps that are allowed to be locked with app lock.
+         Use with extreme caution. -->
+    <string-array name="config_appLockAllowedSystemApps" translatable="false">
+        <!-- Calculator -->
+        <item>com.google.android.calculator</item>
+        <!-- Calendar -->
+        <item>com.google.android.calendar</item>
+        <!-- Camera -->
+        <item>com.google.android.GoogleCamera</item>
+        <!-- OnePlus Camera -->
+        <item>com.oneplus.camera</item>
+        <!-- Xiaomi Camera -->
+        <item>com.android.camera</item>
+        <!-- Camera Go -->
+        <item>com.google.android.apps.cameralite</item>
+        <!-- Chrome -->
+        <item>com.android.chrome</item>
+        <!-- Contact -->
+        <item>com.google.android.contacts</item>
+        <!-- Drive -->
+        <item>com.google.android.apps.docs</item>
+        <!-- Files -->
+        <item>com.google.android.apps.nbu.files</item>
+        <!-- Gallery go -->
+        <item>com.google.android.apps.photosgo</item>
+        <!-- Oneplus Gallery -->
+        <item>com.oneplus.gallery</item>
+        <!-- Gmail -->
+        <item>com.google.android.gm</item>
+        <!-- Maps -->
+        <item>com.google.android.apps.maps</item>
+        <!-- Messaging -->
+        <item>com.google.android.messaging</item>
+        <!-- Play store -->
+        <item>com.android.vending</item>
+        <!-- Photos -->
+        <item>com.google.android.apps.photos</item>
+        <!-- Youtube -->
+        <item>com.google.android.youtube</item>
+        <!-- AOSP apps -->
+        <item>com.android.dialer</item>
+        <item>com.android.messaging</item>
+        <item>com.android.contacts</item>
+        <item>com.android.documentsui</item>
+    </string-array>
 
-    <!-- Display color inversion availability -->
-    <bool name="config_displayInversionAvailable">false</bool>
+    <!-- Defines the sysfs attribute path used by the device
+         to enable/disable DC dimming. -->
+    <string name="config_deviceDcDimmingSysfsNode"></string>
 
-    <!-- Whether charging control should be enabled by default -->
-    <bool name="config_chargingControlEnabled">true</bool>
-    <!-- Default charging control mode.
-       This integer should be set to:
-       1 - auto - Use the alarm to calculate the time range when to activate charging control
-       2 - custom - Use time range when the device is usually charging for hours
-       3 - limit - Just limit charging -->
-    <integer name="config_defaultChargingControlMode">2</integer>
-    <!-- Default time when charging control is activated.
-       Represented as seconds from midnight (e.g. 79200 == 10pm). -->
-    <integer name="config_defaultChargingControlStartTime">79200</integer>
-    <!-- Default time when battery will be fully charged.
-       Represented as seconds from midnight (e.g. 21600 == 6am). -->
-    <integer name="config_defaultChargingControlTargetTime">21600</integer>
-    <!-- Default charging limit. -->
-    <integer name="config_defaultChargingControlLimit">80</integer>
-    <!-- Considering the fact that the system might have an incorrect estimation of the time to
-       full. Set a time margin to make the device fully charged before the target time arrives.
-       The unit is minutes and the default value is 30 minutes. If you find that it is not enough
-       to make the device to be fully charged at the target time, increase the value
-    -->
-    <integer name="config_chargingControlTimeMargin">30</integer>
-    <!-- For a device that cannot bypass battery when charging stops (that is, the battery current
-       is 0mA when charging stops), the battery will gradually discharge. So we need to make it
-       recharge when the battery level is lower than a threshold. Set this so that the device
-       will be charged between (limit - val) and limit. -->
-    <integer name="config_chargingControlBatteryRechargeMargin">10</integer>
+    <!-- Defines the value used by the device sysfs node
+         to enable DC dimming -->
+    <string name="config_deviceDcDimmingEnableValue">1</string>
+
+    <!-- Defines the value used by the device sysfs node
+         to disable DC dimming -->
+    <string name="config_deviceDcDimmingDisableValue">0</string>
+
+    <!-- Whether device has a physical display cutout -->
+    <bool name="config_physicalDisplayCutout">false</bool>
+
+    <!-- Whether device has a centered display cutout -->
+    <bool name="config_physicalDisplayCutoutCentered">@bool/config_physicalDisplayCutout</bool>
+
+    <!-- Smart 5G -->
+    <bool name="config_supportSmart5G">false</bool>
 </resources>
