--- a/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/res/values/evolution_config.xml
@@ -4,38 +4,6 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <resources>
-    <!-- Name of a font family to use as light font. For theming purpose. -->
-    <string name="config_lightFontFamily" translatable="false">sans-serif-light</string>
-
-    <!-- Name of a font family to use as regular font. For theming purpose. -->
-    <string name="config_regularFontFamily" translatable="false">sans-serif-regular</string>
-
-    <!-- Whether device has dash charging support -->
-    <bool name="config_hasDashCharger">false</bool>
-
-    <!-- Whether device has warp charging support -->
-    <bool name="config_hasWarpCharger">false</bool>
-
-    <!-- Whether device has VOOC charging support -->
-    <bool name="config_hasVoocCharger">false</bool>
-
-    <!-- Whether device has turbo power charging support -->
-    <bool name="config_hasTurboPowerCharger">false</bool>
-
-    <!-- Expected value from fast charging status file  -->
-    <string name="config_oemFastChargerStatusValue" translatable="false">1</string>
-
-    <!-- Whether to cancel fingerprint operation if not idle -->
-    <bool name="config_fpCancelIfNotIdle">false</bool>
-
-    <!-- Whether Pixel props is enabled -->
-    <bool name="config_enablePixelProps">true</bool>
-
-    <!-- Define device configs on boot -->
-    <string-array name="global_device_configs_override" translatable="false">
-    </string-array>
-    <string-array name="device_configs_override" translatable="false">
-    </string-array>
 
     <!-- Whether to force enable multi resolution configuration for camera -->
     <bool name="config_forceMultiResolution">false</bool>
@@ -47,85 +15,8 @@
     <bool name="config_supportScreenOffUdfps">false</bool>
 
     <!-- Whether to use Richtap vibration -->
-    <bool name="config_usesRichtapVibration">false</bool>
-
-    <!-- Defines the sysfs attribute path used by pocket bridge
-         to communicate pocket state to the pocket judge kernel driver. -->
-    <string name="config_pocketBridgeSysfsInpocket"></string>
-
-    <!-- Pocket Lock -->
-    <bool name="config_pocketModeSupported">true</bool>
-    <bool name="config_pocketUseLightSensor">true</bool>
-
-    <!-- Defines custom OEM sensor for pocket detection. -->
-    <string name="config_pocketJudgeVendorSensorName"></string>
-    <item name="config_pocketJudgeVendorSensorValue" format="float" type="dimen">1.0</item>
-    <string name="config_pocketJudgeVendorProximitySensorName"></string>
-
-    <!-- List of system apps that are allowed to be locked with app lock.
-         Use with extreme caution. -->
-    <string-array name="config_appLockAllowedSystemApps" translatable="false">
-        <!-- Calculator -->
-        <item>com.google.android.calculator</item>
-        <!-- Calendar -->
-        <item>com.google.android.calendar</item>
-        <!-- Camera -->
-        <item>com.google.android.GoogleCamera</item>
-        <!-- OnePlus Camera -->
-        <item>com.oneplus.camera</item>
-        <!-- Xiaomi Camera -->
-        <item>com.android.camera</item>
-        <!-- Camera Go -->
-        <item>com.google.android.apps.cameralite</item>
-        <!-- Chrome -->
-        <item>com.android.chrome</item>
-        <!-- Contact -->
-        <item>com.google.android.contacts</item>
-        <!-- Drive -->
-        <item>com.google.android.apps.docs</item>
-        <!-- Files -->
-        <item>com.google.android.apps.nbu.files</item>
-        <!-- Gallery go -->
-        <item>com.google.android.apps.photosgo</item>
-        <!-- Oneplus Gallery -->
-        <item>com.oneplus.gallery</item>
-        <!-- Gmail -->
-        <item>com.google.android.gm</item>
-        <!-- Maps -->
-        <item>com.google.android.apps.maps</item>
-        <!-- Messaging -->
-        <item>com.google.android.messaging</item>
-        <!-- Play store -->
-        <item>com.android.vending</item>
-        <!-- Photos -->
-        <item>com.google.android.apps.photos</item>
-        <!-- Youtube -->
-        <item>com.google.android.youtube</item>
-        <!-- AOSP apps -->
-        <item>com.android.dialer</item>
-        <item>com.android.messaging</item>
-        <item>com.android.contacts</item>
-        <item>com.android.documentsui</item>
-    </string-array>
-
-    <!-- Defines the sysfs attribute path used by the device
-         to enable/disable DC dimming. -->
-    <string name="config_deviceDcDimmingSysfsNode"></string>
-
-    <!-- Defines the value used by the device sysfs node
-         to enable DC dimming -->
-    <string name="config_deviceDcDimmingEnableValue">1</string>
-
-    <!-- Defines the value used by the device sysfs node
-         to disable DC dimming -->
-    <string name="config_deviceDcDimmingDisableValue">0</string>
-
-    <!-- Whether device has a physical display cutout -->
-    <bool name="config_physicalDisplayCutout">false</bool>
-
-    <!-- Whether device has a centered display cutout -->
-    <bool name="config_physicalDisplayCutoutCentered">@bool/config_physicalDisplayCutout</bool>
+    <bool name="config_usesRichtapVibration">true</bool>
 
     <!-- Smart 5G -->
-    <bool name="config_supportSmart5G">false</bool>
+    <bool name="config_supportSmart5G">true</bool>
 </resources>
