--- a/overlay-evolution/EvolutionSettingsResSpacewar/res/values/config.xml
+++ b/overlay-evolution/EvolutionSettingsResSpacewar/res/values/config.xml
@@ -12,7 +12,7 @@
     <bool name="config_supports_dynamic_refresh_rate_controls">true</bool>
 
     <!-- Whether to show a preference item for regulatory information in About phone -->
-    <bool name="config_show_regulatory_info">false</bool>
+    <bool name="config_show_regulatory_info">true</bool>
 	
 	<!-- Whether to show a preference item for mobile plan -->
     <bool name="config_show_mobile_plan">false</bool>
