--- a/overlay/SpacewarSettings/res/values/config.xml
+++ b/overlay/SpacewarSettings/res/values/config.xml
@@ -45,4 +45,7 @@
 
     <!-- The radius of the enrollment progress bar, in dp -->
     <integer name="config_udfpsEnrollProgressBar" translatable="false">99</integer>
+
+    <!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">true</bool>
 </resources>
