--- a/overlay/SpacewarFrameworks/res/values/dimens.xml
+++ b/overlay/SpacewarFrameworks/res/values/dimens.xml
@@ -13,6 +13,9 @@
     <!-- Default radius of the software rounded corners. -->
     <dimen name="rounded_corner_radius">107px</dimen>
 
+    <!-- Default paddings for content around the corners. -->
+    <dimen name="rounded_corner_content_padding">63px</dimen>
+
     <!-- Height of the status bar in portrait.
          Do not read this dimen directly. Use {@link SystemBarUtils#getStatusBarHeight} instead.
          -->
