--- a/overlay/SpacewarSettings/res/values/config.xml
+++ b/overlay/SpacewarSettings/res/values/config.xml
@@ -47,4 +47,7 @@
 
     <!-- The radius of the enrollment progress bar, in dp -->
     <integer name="config_udfpsEnrollProgressBar" translatable="false">99</integer>
+
+    <!-- Whether to show the Preference for Reverse Charging -->
+    <bool name="config_show_reverse_charging">true</bool>
 </resources>
