--- a/overlay/SpacewarSystemUI/res/values/dimens.xml
+++ b/overlay/SpacewarSystemUI/res/values/dimens.xml
@@ -5,19 +5,19 @@
     <dimen name="config_rounded_mask_size">156px</dimen>
 
     <!-- The padding on the start of the statusbar -->
-    <dimen name="status_bar_padding_start">0px</dimen>
+    <dimen name="status_bar_padding_start">8dp</dimen>
 
     <!-- The padding on the end of the statusbar -->
-    <dimen name="status_bar_padding_end">14px</dimen>
+    <dimen name="status_bar_padding_end">0px</dimen>
 
     <!-- The padding on the top of the statusbar (usually 0) -->
-    <dimen name="status_bar_padding_top">18px</dimen>
+    <dimen name="status_bar_padding_top">16px</dimen>
 
     <!-- Height of the status bar header bar when on Keyguard -->
     <dimen name="status_bar_header_height_keyguard">@*android:dimen/status_bar_height</dimen>
 
     <!-- Margin on the left side of the carrier text on Keyguard -->
-    <dimen name="keyguard_carrier_text_margin">8px</dimen>
+    <dimen name="keyguard_carrier_text_margin">8dp</dimen>
 
     <!-- Margin on the bottom of the indication text on Keyguard -->
     <dimen name="keyguard_indication_margin_bottom">320px</dimen>
@@ -29,3 +29,4 @@
     <dimen name="physical_volume_up_button_center_screen_location_y">840px</dimen>
     <dimen name="physical_volume_down_button_center_screen_location_y">990px</dimen>
 </resources>
+    
