--- a/overlay/SpacewarFrameworks/res/values/config.xml
+++ b/overlay/SpacewarFrameworks/res/values/config.xml
@@ -736,7 +736,7 @@
     <bool name="config_spatial_audio_head_tracking_enabled_default">true</bool>
 
     <!-- Enable Zram writeback feature to allow unused pages in zram be written to flash. -->
-    <bool name="config_zramWriteback">false</bool>
+    <bool name="config_zramWriteback">true</bool>
 
     <string name="config_stockFingerprint">Nothing/Spacewar/Spacewar:12/SKQ1.211230.001/1666412462:user/release-keys</string>
 
